DockerRegistryMirror/containerd_hosts_ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: containerd-registry-config-daemon
  namespace: kube-system
  labels:
    app: containerd-registry-config
spec:
  selector:
    matchLabels:
      app: containerd-registry-config
  template:
    metadata:
      labels:
        app: containerd-registry-config
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      tolerations:
        - key: node-role.kubernetes.io/master
          operator: Exists
          effect: NoSchedule
      containers:
        - name: copy-files
          image: busybox
          command:
            - /bin/sh
            - -c
            - cd /src;
              find */* -type d ! -name '..*' -exec mkdir -pv '/etc/containerd/{}' \;;
              find */* -type l ! -name '..*' -exec cp -v '{}' '/etc/containerd/{}' \;;
              echo "Done copying files.";
              sleep infinity
          volumeMounts:
            - name: hostcontainerd
              mountPath: /etc/containerd
            - name: dockerio
              mountPath: /src/certs.d/docker.io
      terminationGracePeriodSeconds: 0
      volumes:
        - name: hostcontainerd
          hostPath:
            path: /etc/containerd
            type: Directory
        - name: dockerio
          configMap:
            name: containerd-dockerio-mirror
