DockerRegistryMirror/registry.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-mirror
  labels:
    app: registry-mirror
spec:
  replicas: 1
  template:
    metadata:
      name: registry-mirror
      labels:
        app: registry-mirror
    spec:
      volumes:
        - name: config
          configMap:
            name: docker-registry
            items:
              - key: registry-config.yml
                path: config.yml
        - name: storage
          emptyDir: { }
      containers:
        - name: docker-registry
          image: registry:2.8.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/docker/registry
              readOnly: true
            - name: storage
              mountPath: /var/lib/registry
  selector:
    matchLabels:
      app: registry-mirror
