DockerRegistryMirror/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - registry.jaylee.cloud
      secretName: registry-tls-secret
  rules:
    - host: registry.jaylee.cloud
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: docker-registry
              port:
                number: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
spec:
  selector:
    name: docker-registry
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  type: ClusterIP
